--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=EasyKids3in1Robot
-version=0.0.1
+name=EasyKids3in1
+version=0.0.2
 author=kisvegabor
 maintainer=kisvegabor,embeddedt,pete-pjb
 sentence=Full-featured Graphics Library for Embedded Systems
@@ -7,4 +7,4 @@ paragraph=Powerful and easy-to-use embedded GUI with many widgets, advanced visu
 category=Education Robot
 url=https://www.easykidrobotics.com
 architectures=*
-includes=EasyKids3in1Robot.h
+includes=EasyKids3in1.h
